# Text-LLM-Training-from-scratch

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: base.json  small.json  tiny.json  tinystories-15m.json
docs/: architecture.md
docs/figures/src/: 01-system-overview.mmd  02-two-interfaces.mmd  03-bpe-tokenizer.mmd  04-data-pipeline.mmd  05-model-architecture.mmd  06-kv-cache.mmd  07-sft-masking.mmd  08-reward-model.mmd  09-dpo.mmd  10-grpo.mmd
examples/: prefs.jsonl  prompts.txt  questions.jsonl  sft.jsonl  tiny_corpus.txt
tests/: test_alignment.py  test_checkpoint.py  test_cli.py  test_config.py  test_data.py  test_device.py  test_e2e.py  test_generate.py  test_model.py  test_serve.py  test_tokenizer.py  test_training.py  test_tui.py
textllm/: __init__.py  chat_template.py  cli.py  config.py  device.py  runtime.py  tui.py
textllm/data/: __init__.py  datasets.py  shards.py
textllm/eval/: __init__.py  loss.py  reasoning.py
textllm/infer/: __init__.py  chat.py  generate.py  sample.py  serve.py
textllm/model/: __init__.py  attention.py  block.py  mlp.py  norm.py  rope.py  transformer.py
textllm/tokenizer/: __init__.py  bpe.py
textllm/train/: __init__.py  dpo.py  grpo.py  loop.py  pretrain.py  reward.py  rewards.py  sft.py
